--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -141,7 +141,7 @@ main {
 @media (min-width: 1024px) {
   main {
     flex-direction: row;
-    height: 100vh;
+
     align-items: center;
   }
   main section {
@@ -210,10 +210,13 @@ body {
   color: var(--color-text);
   padding: 1rem 0;
 }
-.navbar-home .container {
+.navbar-home > div.container {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+.navbar__logo {
+  width: 126px;
 }
 .navbar__links,
 .navbar__auth {
@@ -288,15 +291,25 @@ body {
   color: #000;
   font-weight: 900;
 }
+
 main {
   position: relative;
+  padding: 4rem 0;
 }
 main h2 {
   color: #fff;
 }
-.movies-container .container {
+main {
+  display: flex;
+  flex-direction: column;
+}
+.movies-container {
+  max-width: 80%;
+  margin: 0 auto;
   display: flex;
   flex-flow: row wrap;
+  justify-content: center;
+
   gap: 20px;
   position: relative;
 }
@@ -313,6 +326,8 @@ main h2 {
 }
 .movie__image {
   overflow: hidden;
+  margin-bottom: 0.5rem;
+  position: relative;
 }
 .movie-info {
   display: flex;
@@ -328,22 +343,41 @@ main h2 {
   gap: 15px;
 
   position: absolute;
-  bottom: 15px;
-  left: 15px;
+  bottom: 0;
+  left: 0;
 
   background: linear-gradient(
     90deg,
     rgba(0, 0, 0, 0.92) 100%,
     rgba(0, 0, 0, 1) 0%
   );
-  width: calc(100% - 30px);
-  transform: translateY(110%);
-  transition: var(--transition);
-  transition-duration: 0.25s;
+  width: 100%;
+  height: 100%;
   padding: 10px;
-  height: calc(100% - 30px);
+
+  opacity: 0;
+  transition: var(--transition);
+}
+.overview p {
+  width: 100%;
 }
 
 .movie:hover .overview {
-  transform: translateY(0%);
+  opacity: 1;
+}
+
+.green {
+  color: green;
+}
+.red {
+  color: red;
+}
+.orange {
+  color: orange;
+}
+@media (max-width: 768px) {
+  .container {
+    max-width: 90%;
+    margin: 0 auto;
+  }
 }
