--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -408,9 +408,11 @@ main {
   display: none;
 }
 .details__section {
+  padding-top: 6rem;
   color: var(--color-fifth);
+  margin-bottom: 4rem;
 }
-.details {
+.details__section .container {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -422,13 +424,18 @@ main {
   /* justify-content: space-between; */
   gap: 2rem;
 }
+@media (max-width: 768px) {
+  .detail {
+    flex-direction: column;
+  }
+}
 
-.details.container h2 {
+.details__section .container h2 {
   font-size: 2rem;
   padding: 1rem 0;
   color: rgb(255, 57, 57);
 }
-.details figure.image {
+.details__section figure.image {
   max-width: 18.75rem;
 }
 .details .content {
@@ -443,17 +450,55 @@ main {
   gap: 2rem;
   max-width: 25rem;
 }
-.details .overview {
+.details__section .overview {
   font-size: 1.2rem;
 }
-.details .rating {
+.details__section .rating {
   background-color: rgba(255, 255, 255, 0.066);
   width: fit-content;
   padding: 1rem 2rem;
   border-radius: 0.9375rem;
 }
 
-//chat bot
+.comments__section form input {
+  width: 60%;
+  padding: 1rem;
+  border: none;
+  outline: none;
+  font-size: 1.2rem;
+}
+.comments__section form button {
+  /* width: 30%; */
+  font-size: 1.2rem;
+  padding: 1rem;
+  background-color: #f9ab00;
+  color: #222;
+  font-weight: 600;
+  border: none;
+}
+.comments__section ul {
+  margin-top: 1rem;
+  width: 100%;
+  color: white;
+  font-size: 1.2rem;
+
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+.comments__section ul li {
+  background-color: #0376af4a;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.625rem;
+}
+.comments__section li h5 {
+  color: #f9ab00;
+  font-size: 1.2rem;
+}
+
+/* chat bot */
 #chatbot-icon {
   position: fixed;
   bottom: 20px;
