--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -459,7 +459,10 @@ main {
   padding: 1rem 2rem;
   border-radius: 0.9375rem;
 }
-
+.comments__section {
+  max-width: 50%;
+  margin: 0 auto;
+}
 .comments__section form input {
   width: 60%;
   padding: 1rem;
