--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -460,7 +460,7 @@ main {
   border-radius: 0.9375rem;
 }
 .comments__section {
-  max-width: 50%;
+  max-width: 60.1875rem;
   margin: 0 auto;
 }
 .comments__section form input {
